# DxfLib

./: CMakeLists.txt
Src/: DataSource.cpp  DataSource.hpp  DxfDrawing.cpp  DxfDrawing.h  DxfDrawing.hpp  DxfParser.cpp  DxfParser.h  DxfParser.hpp  DxfWriter.cpp  LineExtractor.cpp  LineExtractor.hpp
Tests/: DxfDrawingTest.cpp  DxfFileParser.cpp  DxfParserTest.cpp  DxfWriterTest.cpp  LineExtractorTest.cpp
Tests/TestData/: Polyline.dxf  Polyline3D.dxf
